--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,10 +31,11 @@ const posts = (await getCollection("posts")).sort(function (first, second) {
       }
 
       <div class="flex flex-col gap-8">
-        <h1 class="text-3xl text-neutral-100">
+        <h1 class="text-5xl text-neutral-100">
           {presentation.title}
         </h1>
 
+        <p class="text-2xl text-neutral-100">I code, write and talk.</p>
         <h2
           class="w-auto max-w-[60ch] leading-6"
           set:html={convertAsteriskToStrongTag(presentation.description)}
