--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,9 +20,8 @@ const { title } = Astro.props;
   <SEOTags title={title} />
 
   <body
-    class="mx-auto flex min-h-screen max-w-[872px] flex-col gap-9 bg-neutral-950 px-10 py-8 text-sm text-neutral-400 md:gap-20"
+    class="black mx-auto flex min-h-screen max-w-[872px] flex-col gap-9 bg-gradient-to-tr from-indigo-900 to-black px-10 py-8 text-sm text-neutral-400 md:gap-20"
   >
-    <div style={{height: "100vh", background: "black"}}></div>
     <Header />
     <BlurCircle position="top" color={theme.colors.blur.top} />
     <BlurCircle position="bottom" color={theme.colors.blur.bottom} />
