--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,23 +31,23 @@ const posts = (await getCollection("posts")).sort(function (first, second) {
       }
 
       <div class="flex flex-col gap-8">
-        <h1 class="text-5xl text-neutral-100">
+        <!-- <h1 class="text-5xl text-neutral-100">
           {presentation.title}
-        </h1>
+        </h1> -->
 
-        <p class="text-2xl text-neutral-100">I code, write and talk.</p>
+        <p class="text-2xl text-neutral-100">I write, code and talk.</p>
         <h2
           class="w-auto max-w-[60ch] leading-6"
           set:html={convertAsteriskToStrongTag(presentation.description)}
         />
 
-        <SocialLinks />
+        <!-- <SocialLinks /> -->
       </div>
     </article>
 
     <article class="flex flex-col gap-8">
       <header class="flex w-full flex-row justify-between gap-2">
-        <h3 class="text-lg text-neutral-100">Latest posts</h3>
+        <h3 class="text-lg text-neutral-100">I write</h3>
         <Link href="/posts" label="See all posts" isUnderline target="_self" />
       </header>
       {posts.length === 0 && <p>Soon, stay connected 👀...</p>}
@@ -56,13 +56,14 @@ const posts = (await getCollection("posts")).sort(function (first, second) {
         {
           posts.length !== 0 &&
             posts
-              .slice(0, 2)
+              .slice(0, 3)
               .map((post) => (
                 <PostCard
                   publishedAt={post.data.publishedAt}
                   title={post.data.title}
                   description={post.data.description}
                   slug={post.slug}
+                  img={post.data.img}
                 />
               ))
         }
@@ -71,9 +72,7 @@ const posts = (await getCollection("posts")).sort(function (first, second) {
 
     <article class="flex flex-col gap-8">
       <header class="flex w-full flex-row justify-between gap-2">
-        <h3 class="text-lg text-neutral-100">
-          Selected projects ({projects.length})
-        </h3>
+        <h3 class="text-lg text-neutral-100">I code</h3>
       </header>
       {projects.length === 0 && <p>Oops, I must work^^^^^</p>}
 
@@ -87,6 +86,12 @@ const posts = (await getCollection("posts")).sort(function (first, second) {
 
     <article class="flex flex-col gap-8">
       <header class="flex w-full flex-row justify-between gap-2">
+        <h3 class="text-lg text-neutral-100">I talk</h3>
+      </header>
+    </article>
+
+    <!-- <article class="flex flex-col gap-8">
+      <header class="flex w-full flex-row justify-between gap-2">
         <h3 class="text-lg text-neutral-100">Get in touch</h3>
       </header>
       <p>
@@ -97,6 +102,6 @@ const posts = (await getCollection("posts")).sort(function (first, second) {
       </p>
 
       <SocialLinks />
-    </article>
+    </article> -->
   </main>
 </Layout>
