--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -6,17 +6,19 @@ type Props = {
   publishedAt: Date;
   description: string;
   slug: string;
+  img: string;
 };
 
-const { title, publishedAt, description, slug } = Astro.props;
+const { title, publishedAt, description, slug, img } = Astro.props;
 ---
 
 <a
-  class="group flex max-w-sm cursor-pointer flex-col gap-2 rounded-md border border-neutral-700 p-4 transition-all duration-300 hover:-translate-y-2 hover:border-neutral-400"
+  class="group flex max-w-sm cursor-pointer flex-col gap-2 rounded-md border border-neutral-700 bg-slate-700 transition-all duration-300 hover:-translate-y-2 hover:border-neutral-400"
   href={`/posts/${slug}`}
 >
+  <img src={img} class="rounded-t-md" />
   <div
-    class="flex w-full flex-col justify-between gap-2 md:flex-row md:items-center"
+    class="flex w-full flex-col justify-between gap-2 p-4 md:flex-row md:items-center"
   >
     <p class="text-neutral-100">{title}</p>
     <div class="flex flex-row items-center gap-4">
@@ -41,9 +43,9 @@ const { title, publishedAt, description, slug } = Astro.props;
           stroke-linejoin="round"></path>
       </svg>
     </div>
-  </div>
 
-  <p class="truncate">
-    {description}
-  </p>
+    <p>
+      {description}
+    </p>
+  </div>
 </a>
